# tokencamp

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
cli/: Cargo.toml
cli/src/: main.rs
config/: default.yaml  prometheus-rules.yml
docker/: Dockerfile  docker-compose.yml
docs/adr/: 001-rust-axum-tech-stack.md  002-gateway-core-dual-layer.md  003-provider-adapter-pattern.md  004-hook-system.md  005-prisma-postgresql-data-model.md  006-redis-dual-cache.md  007-yaml-config-hot-reload.md  008-openai-compatible-api.md  009-spend-tracking-batch-write.md  010-router-strategies.md  011-resilience-patterns.md  012-multi-tenant-isolation.md  013-secret-management.md  014-streaming.md  015-health-checks.md  016-observability.md  COMPARISON-litellm.md  README.md
docs/kllm/adr/: 001-kllm-architecture.md
docs/plans/: 2026-05-30-v0.1-hello-gateway.md  2026-05-31-v0.2-multi-provider-streaming.md  2026-05-31-v0.3-production-mvp.md  2026-05-31-v0.4-routing-strategies.md
docs/specs/: 2026-05-30-v0.1-hello-gateway.md  2026-05-31-v0.2-multi-provider-streaming.md  2026-05-31-v0.3-production-mvp.md  2026-05-31-v0.4-routing-strategies.md
gateway/: Cargo.toml
gateway/src/: auth.rs  cache.rs  config.rs  encryptor.rs  error.rs  extractors.rs  health.rs  main.rs  metrics.rs  secret.rs
gateway/src/admin/: deployments.rs  keys.rs  mod.rs
gateway/src/db/: mod.rs
gateway/src/resilience/: mod.rs  retry.rs
gateway/src/router/: cooldown.rs  mod.rs
gateway/src/routes/: chat.rs  embeddings.rs  media.rs  messages.rs  mod.rs  models.rs
migrations/: 20260531_credentials.up.sql  20260531_initial.up.sql
tokencamp-core/: Cargo.toml
tokencamp-core/src/: handler.rs  lib.rs  streaming.rs  types.rs
tokencamp-core/src/cache/: mod.rs
tokencamp-core/src/hooks/: cost_tracker.rs  mod.rs  parallel_request_limiter.rs
tokencamp-core/src/provider/: anthropic.rs  mod.rs  openai.rs
tokencamp-core/src/router_strategy/: lowest_cost.rs  lowest_latency.rs  mod.rs  simple_shuffle.rs  tag_based.rs  usage_based.rs
