# gateway/Cargo.toml
[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokencamp-core = { path = "../tokencamp-core" }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
rand = "0.8"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
