# tokencamp-core/Cargo.toml
[package]
name = "tokencamp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
bytes = "1"
pin-project-lite = "0.2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
